font awesome icons used for icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1>Image Gallery</h1>
-                <p>A bunch of random wholesome pictures that remind me of what happiness looks like on a gloomy day!!</p>
+                <p>Wholesome pictures of beautiful people & pink flowers</p>
             </div>
 
             <div class="row">
