--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
     <head>
         <title>Image Gallery</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
         <link rel="stylesheet" type="text/css"  href="styles.css">
     </head>
     <body>
+
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">	 
+                <div class="navbar-header">	              
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-demo" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                    <a href="#" class="navbar-brand"><i class="far fa-images"></i> IMGS</a>	                    
+                </div>	 
+                <div class="collapse navbar-collapse" id="#bs-nav-demo">
+                    <ul class="nav navbar-nav">	                
+                        <li><a href="#">About</a></li>	                    
+                        <li><a href="#">Contact</a></li>	                       
+                    </ul>	                       
+                    <ul class="nav navbar-nav navbar-right">	                  
+                        <li><a href="#">Sign Up</a></li>	                    
+                        <li><a href="#">Login</a></li>	                        
+                    </ul>	                     
+                </div>
+            </div>
+        </nav>	       
+        
         <div class="container">
             <div class="jumbotron">
-                <h1>Image Gallery</h1>
-                <p>Wholesome pictures of beautiful people & pink flowers</p>
+                <span class="spanH1">
+                    <h1><i class="fas fa-camera-retro"></i></span>  The Image Gallery</h1>
+                    <p>Wholesome pictures of beautiful people & pink flowers</p>
+                </span>
             </div>
 
             <div class="row">
@@ -68,7 +96,7 @@
             </div>
         </div>
        
-        <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
